--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,8 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+del,ins,a {text-decoration:none;}
+a:link {color:#000000;}
+a:visited {color:#000000;}
+a:hover,a:active,a:focus {color:#000000;}
